# playdate-metal-crank

./: .gitignore  CMakeLists.txt  build_for_device.sh  device_build.sh  run.sh  run_slow.sh  simulator_build.sh  simulator_run.sh  simulator_run_slow.sh
Source/: pdex.elf  pdxinfo  plowthrough.mid
src/: main.c
